src/main/java/com/example/MovieBooking/Error/CinemaNotFoundException.java
package com.example.MovieBooking.Error;

public class CinemaNotFoundException extends RuntimeException{
    public CinemaNotFoundException(String ms)
    {
        super(ms);
    }
}
